# ck3oop

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  build-exe.sh  justfile  main.js  nodemon.json  package-lock.json  package.json  release-please-config.json  sea-config.json
.cargo/: config.toml
.github/: .release-please-manifest.json  dependabot.yml  release-please-config.json  renovate.json
.github/workflows/: npm-publish-package.yaml  publish.yaml  release-please.yaml  release-tauri.yaml  rust-publish-crate.yaml  rust-test.yaml  tauri-publish-artifacts.yaml  ui-test-e2e.yaml
ck3oop-core-js/: package.json  tsconfig.json
ck3oop-core-js/src/: index.ts
ck3oop-core-rs/: CHANGELOG.md  Cargo.toml
ck3oop-core-rs/src/: lib.rs  mods.rs  workspace.rs
ck3oop-core-rs/test_utils/: Cargo.toml
ck3oop-core-rs/test_utils/src/: path.rs
ck3oop-core-rs/tests/: helloworld_test.rs  mods_test.rs  this_file_test.rs  workspace_test.rs
ck3oop-core-rs/tests/fixtures/windows/game_data/mod/: _mod1.mod  mod1.mod  mod2.mod
ck3oop-ui/: CHANGELOG.md  package.json
ck3oop-ui/src/: main.ts
ck3oop-ui/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
ck3oopui/: bun.lockb  index.html  package-lock.json  package.json
ck3oopui/src/: App.vue  main.js  navigation.js  style.css
ck3oopui/src-tauri/: Cargo.toml  tauri.conf.json
ck3oopui/src-tauri/src/: main.rs
ck3oopui/src-tauri/test/paradocdir/mod/: test.mod
ck3oopui/src/components/: Tree.vue  TreeNode.vue
ck3oopui/src/store/: app.js  workspaceList.js
ck3oopui/src/views/: Editor.vue  Home.vue  WorkspaceList.vue
example/: ck3oop.json  dlc_load.json  loadorder.json  sorted_mods.json  sorted_playset.json
example/rules/: README.md  TODO.md  conflict_on_action.js  loadorderrule.js  parsingrule.js  saveargsasjson.js  utils.js
example/rules/characters/: check_characters_conflict.js  set_characters.js
example/rules/loadorder/: README.md  logconflictingfiles.js  sorting_rules.json  sortingrules.js  sortmodsbyrules.js
example/rulesout/: README.md  conflictingFiles.json  context.json  cultures.json  enabledFiles.json  enabledMods.json  equalityLoadOrderByName.json  gameFiles.json  modCultureFiles.json  sortedEnabledFiles.json  traditions.json
example/rulesout/characters/: mods_characters.json
example/rulesout/conflict_on_action/: Community Flavor Pack_on_action.json  Culture Expanded_on_action.json  Ethnicities and Portraits Expanded_on_action.json  Regional Immersion and Cultural Enrichment (RICE)_on_action.json  vanilla_on_action.json
old/: build-exe.sh  main.js  nodemon.json  package-lock.json  package.json  sea-config.json
old/example/: ck3oop.json  dlc_load.json  sorted_mods.json  sorted_playset.json
old/example/rules/: README.md  TODO.md  utils.js
old/example/rules/characters/: README.md
old/example/rules/loadorder/: README.md  logconflictingfiles.js  sorting_rules.json  sortingrules.js  sortmodsbyrules.js
old/example/rulesout/: README.md
old/test/: config.test.js  testUtils.js
old/test/loadorder/: sortingrules.test.js
old/test/mod/: ugc_2291024373.mod
scripts/: Cargo.toml
scripts/src/: build.rs  config.rs  download_webdriver.rs  init_build.rs  read_build.rs  test-e2e.rs
src/: config.js  files.js  mods.js
test/: config.test.js  mods.test.js  testUtils.js
test/loadorder/: sortingrules.test.js
test/mod/: ugc_2291024373.mod
tests-e2e/: package.json  tsconfig.json
tests-e2e/src/: main.ts
