[workspace]
resolver = "2"
members = [
    "ck3oop-core-rs",
    "ck3oop-core-rs/test_utils",
    "ck3oop-ui/src-tauri"]

[workspace.package]
version = "0.1.2"
publish = false
authors = ["ck3oop", "bukowa"]
homepage = "https://github.com/bukowa/ck3oop"
license = "MIT"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/bukowa/ck3oop"
