[package]
name = "ck3oop-core-rs"
version = "0.1.1"
edition = "2021"
authors.workspace = true
repository = "https://github.com/bukowa/ck3oop"
keywords = ["ck3oop"]
license = "MIT"
homepage = "https://github.com/bukowa/ck3oop"
description = "ck3oop"
[dev-dependencies]
test_utils = {path = "test_utils"}
