[package]
name = "ck3oop-scripts"
edition = "2021"
publish = false
version = "0.0.0"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/download_webdriver.rs"
name = "download_webdriver"

[[bin]]
path = "src/read_build.rs"
name = "read_build"

[[bin]]
path = "src/init_build.rs"
name = "init_build"

[[bin]]
path = "src/config.rs"
name = "config"


[dependencies]
cargo-run-bin = {version = "=1.7.2", default-features = false}
anyhow = "=1.0.86"
tempfile = "=3.10.1"
reqwest = {version = "=0.12.5", features = ["blocking"]}
zip = {version = "=2.1.3"}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
which = "=6.0.1"
clap = "=4.5.7"
[target.'cfg(windows)'.dependencies]
winreg = {version = "=0.52.0"}
